parser.output
Terminals unused in grammar

   WHITESPACE
   LETTER
   ALPHANUM
   LITERALCHAR
   MULTILINESTRING
   KEYWORD_AWAIT
   KEYWORD_LAMBDA
   KEYWORD_ASYNC
   OPERATORS
   ASSIGNBITWISEAND
   ASSIGNBITWISEOR
   ASSIGNBITWISEXOR
   NOT
   LEFT_BRACES
   RIGHT_BRACES
   LEFT_BRACKETS
   RIGHT_BRACKETS
   SEMICOLON
   '+'
   '-'
   '/'


State 0 conflicts: 1 shift/reduce
State 4 conflicts: 1 shift/reduce
State 28 conflicts: 24 shift/reduce
State 32 conflicts: 2 shift/reduce
State 56 conflicts: 12 shift/reduce
State 72 conflicts: 1 shift/reduce
State 75 conflicts: 1 shift/reduce
State 77 conflicts: 1 shift/reduce
State 80 conflicts: 26 reduce/reduce
State 83 conflicts: 12 shift/reduce
State 98 conflicts: 26 reduce/reduce
State 107 conflicts: 1 shift/reduce
State 125 conflicts: 1 shift/reduce
State 126 conflicts: 1 shift/reduce
State 127 conflicts: 1 shift/reduce
State 128 conflicts: 1 shift/reduce
State 130 conflicts: 2 shift/reduce
State 131 conflicts: 6 shift/reduce
State 132 conflicts: 1 shift/reduce
State 134 conflicts: 6 shift/reduce
State 153 conflicts: 12 shift/reduce
State 160 conflicts: 12 shift/reduce
State 197 conflicts: 1 shift/reduce
State 201 conflicts: 6 shift/reduce
State 202 conflicts: 6 shift/reduce
State 203 conflicts: 6 shift/reduce
State 204 conflicts: 6 shift/reduce
State 205 conflicts: 6 shift/reduce
State 206 conflicts: 6 shift/reduce
State 213 conflicts: 2 shift/reduce
State 214 conflicts: 2 shift/reduce
State 253 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: /* empty */
    2     | NEWLINE
    3     | prog statements

    4 statements: statements statement
    5           | statement
    6           | statements NEWLINE

    7 statement: compound_statement
    8          | simple_statement
    9          | NEWLINE
   10          | COMMENT
   11          | MULTILINECOMMENT

   12 simple_statement: assignment
   13                 | return_statement
   14                 | yield_statement
   15                 | assert_statement
   16                 | raise_statement
   17                 | global_statement
   18                 | nonlocal_statement
   19                 | del_statment
   20                 | import_statments
   21                 | function_call
   22                 | with_statment
   23                 | KEYWORD_PASS
   24                 | KEYWORD_BREAK
   25                 | KEYWORD_CONTINUE

   26 compound_statement: function
   27                   | conditional_statement
   28                   | class
   29                   | for_statement
   30                   | while_statement
   31                   | match_statement
   32                   | try_statement

   33 import_statments: import_statment NEWLINE
   34                 | import_statments import_statment

   35 import_statment: KEYWORD_IMPORT member_expression
   36                | KEYWORD_FROM member_expression KEYWORD_IMPORT IDENTIFIER
   37                | KEYWORD_FROM member_expression KEYWORD_IMPORT '*'
   38                | KEYWORD_IMPORT member_expression KEYWORD_AS IDENTIFIER
   39                | KEYWORD_FROM member_expression KEYWORD_IMPORT IDENTIFIER KEYWORD_AS IDENTIFIER

   40 assignment: member_expression ASSIGN expression
   41           | member_expression ASSIGNADD expression
   42           | member_expression ASSIGNDIVIDE expression
   43           | member_expression ASSIGNEXPONINTIATION expression
   44           | member_expression ASSIGNMULTIPLY expression
   45           | member_expression ASSIGNMODULO expression
   46           | member_expression ASSIGNMINUS expression
   47           | member_expression ASSIGNFLOORDIVISION expression
   48           | member_expression ASSIGNRIGHTSHIFT expression
   49           | member_expression ASSIGNLEFTSHIFT expression

   50 expression: expression ADD expression
   51           | expression MINUS expression
   52           | expression MULTIPLY expression
   53           | expression DIVIDE expression
   54           | expression POWER expression
   55           | expression MODULO expression
   56           | '|' expression
   57           | LEFT_PARENTHES expression RIGHT_PARENTHES
   58           | MINUS expression
   59           | number
   60           | member_expression
   61           | function_call
   62           | LITERALSTRING
   63           | LIST
   64           | TUPLE
   65           | KEYWORD_NONE
   66           | KEYWORD_TRUE
   67           | KEYWORD_FALSE

   68 number: INTEGER
   69       | FLOAT

   70 del_statment: KEYWORD_DEL IDENTIFIER
   71             | KEYWORD_DEL IDENTIFIER LIST

   72 return_statement: KEYWORD_RETURN expression
   73                 | KEYWORD_RETURN logical_expression

   74 yield_statement: KEYWORD_YIELD expression

   75 assert_statement: KEYWORD_ASSERT logical_expression
   76                 | KEYWORD_ASSERT logical_expression COMMA LITERALSTRING

   77 raise_statement: KEYWORD_RAISE function_call
   78                | KEYWORD_RAISE function_call KEYWORD_FROM IDENTIFIER

   79 global_statement: KEYWORD_GLOBAL global_nonlocal_targets

   80 nonlocal_statement: KEYWORD_NONLOCAL global_nonlocal_targets

   81 global_nonlocal_targets: IDENTIFIER
   82                        | IDENTIFIER COMMA global_nonlocal_targets

   83 match_statement: KEYWORD_MATCH IDENTIFIER COLON match_block

   84 match_block: NEWLINE INDENT cases DEDENT

   85 cases: cases case
   86      | case

   87 case: KEYWORD_CASE expression COLON block

   88 try_statement: try finally
   89              | try except_statements
   90              | try except_statements finally
   91              | try except_statements else_statement
   92              | try except_statements else_statement finally

   93 try: KEYWORD_TRY COLON block

   94 except: KEYWORD_EXCEPT COLON block
   95       | KEYWORD_EXCEPT member_expression COLON block
   96       | KEYWORD_EXCEPT member_expression KEYWORD_AS IDENTIFIER COLON block

   97 finally: KEYWORD_FINALLY COLON block

   98 except_statements: except_statements except
   99                  | except

  100 with_statment: KEYWORD_WITH with_stmt COLON block

  101 with_stmt: function_call KEYWORD_AS IDENTIFIER
  102          | with_stmt COMMA function_call KEYWORD_AS IDENTIFIER

  103 class: class_with_inheritance
  104      | class_without_inheritance

  105 class_with_inheritance: KEYWORD_CLASS IDENTIFIER LEFT_PARENTHES args RIGHT_PARENTHES COLON class_block

  106 class_block: NEWLINE INDENT class_body DEDENT

  107 class_body: /* empty */
  108           | class_body assignment
  109           | class_body function
  110           | class_body NEWLINE

  111 class_without_inheritance: KEYWORD_CLASS IDENTIFIER COLON class_block

  112 function_call: IDENTIFIER LEFT_PARENTHES args RIGHT_PARENTHES
  113              | IDENTIFIER LEFT_PARENTHES number RIGHT_PARENTHES
  114              | IDENTIFIER LEFT_PARENTHES LITERALSTRING RIGHT_PARENTHES
  115              | IDENTIFIER LEFT_PARENTHES function_call RIGHT_PARENTHES

  116 function: KEYWORD_DEF IDENTIFIER LEFT_PARENTHES args RIGHT_PARENTHES COLON block

  117 block: NEWLINE INDENT statements DEDENT

  118 args: /* empty */
  119     | args expression COMMA
  120     | args expression
  121     | expression COMMA
  122     | expression

  123 member_expression: IDENTIFIER
  124                  | member_expression IDENTIFIER
  125                  | member_expression function_call

  126 logical_expression: expression
  127                   | expression GREATEROREQUAL expression
  128                   | expression GREATERTHAN expression
  129                   | expression LESSOREQUAL expression
  130                   | expression LESSTHAN expression
  131                   | expression EQUAL expression
  132                   | expression NOTEQUAL expression
  133                   | expression KEYWORD_IS expression
  134                   | logical_expression KEYWORD_AND logical_expression
  135                   | logical_expression KEYWORD_OR logical_expression
  136                   | KEYWORD_NOT logical_expression

  137 conditional_statement: if_statement elif_else

  138 elif_else: /* empty */
  139          | elif_stmts else_statement
  140          | elif_stmts
  141          | else_statement

  142 elif_stmts: elif_statement
  143           | elif_stmts elif_statement

  144 if_statement: KEYWORD_IF logical_expression COLON block
  145             | KEYWORD_IF LEFT_PARENTHES logical_expression RIGHT_PARENTHES COLON block

  146 else_statement: KEYWORD_ELSE COLON block

  147 elif_statement: KEYWORD_ELSE_IF logical_expression COLON block
  148               | KEYWORD_ELSE_IF LEFT_PARENTHES logical_expression RIGHT_PARENTHES COLON block

  149 for_statement: KEYWORD_FOR IDENTIFIER KEYWORD_IN function_call COLON block
  150              | KEYWORD_FOR IDENTIFIER KEYWORD_IN LIST COLON block
  151              | KEYWORD_FOR LEFT_PARENTHES args RIGHT_PARENTHES KEYWORD_IN function_call COLON block
  152              | KEYWORD_FOR IDENTIFIER KEYWORD_IN member_expression COLON block
  153              | KEYWORD_FOR IDENTIFIER KEYWORD_IN member_expression function_call COLON block
  154              | KEYWORD_FOR IDENTIFIER KEYWORD_IN member_expression function_call '.' IDENTIFIER COLON block

  155 while_statement: KEYWORD_WHILE logical_expression COLON block
  156                | KEYWORD_WHILE LEFT_PARENTHES logical_expression RIGHT_PARENTHES COLON block


Terminals, with rules where they appear

$end (0) 0
'*' (42) 37
'+' (43)
'-' (45)
'.' (46) 154
'/' (47)
'|' (124) 56
error (256)
WHITESPACE (258)
LETTER (259)
ALPHANUM (260)
IDENTIFIER (261) 36 38 39 70 71 78 81 82 83 96 101 102 105 111 112
    113 114 115 116 123 124 149 150 152 153 154
LIST (262) 63 71 150
LITERALSTRING (263) 62 76 114
LITERALCHAR (264)
KEYWORD_FALSE (265) 67
KEYWORD_TRUE (266) 66
MULTILINESTRING (267)
KEYWORD_AWAIT (268)
KEYWORD_IF (269) 144 145
KEYWORD_ELSE (270) 146
KEYWORD_ELSE_IF (271) 147 148
KEYWORD_IMPORT (272) 35 36 37 38 39
KEYWORD_PASS (273) 23
KEYWORD_NONE (274) 65
KEYWORD_BREAK (275) 24
KEYWORD_EXCEPT (276) 94 95 96
KEYWORD_IN (277) 149 150 151 152 153 154
KEYWORD_RAISE (278) 77 78
KEYWORD_CLASS (279) 105 111
KEYWORD_FINALLY (280) 97
KEYWORD_IS (281) 133
KEYWORD_RETURN (282) 72 73
KEYWORD_AND (283) 134
KEYWORD_CONTINUE (284) 25
KEYWORD_FOR (285) 149 150 151 152 153 154
KEYWORD_LAMBDA (286)
KEYWORD_TRY (287) 93
KEYWORD_AS (288) 38 39 96 101 102
KEYWORD_DEF (289) 116
KEYWORD_FROM (290) 36 37 39 78
KEYWORD_NONLOCAL (291) 80
KEYWORD_WHILE (292) 155 156
KEYWORD_ASSERT (293) 75 76
KEYWORD_DEL (294) 70 71
KEYWORD_GLOBAL (295) 79
KEYWORD_NOT (296) 136
KEYWORD_WITH (297) 100
KEYWORD_ASYNC (298)
KEYWORD_OR (299) 135
KEYWORD_YIELD (300) 74
OPERATORS (301)
COMMENT (302) 10
ADD (303) 50
MINUS (304) 51 58
MULTIPLY (305) 52
MULTILINECOMMENT (306) 11
DIVIDE (307) 53
POWER (308) 54
MODULO (309) 55
ASSIGN (310) 40
ASSIGNADD (311) 41
ASSIGNMINUS (312) 46
ASSIGNMULTIPLY (313) 44
ASSIGNDIVIDE (314) 42
ASSIGNMODULO (315) 45
ASSIGNFLOORDIVISION (316) 47
ASSIGNEXPONINTIATION (317) 43
ASSIGNBITWISEAND (318)
ASSIGNBITWISEOR (319)
ASSIGNBITWISEXOR (320)
ASSIGNRIGHTSHIFT (321) 48
ASSIGNLEFTSHIFT (322) 49
EQUAL (323) 131
NOT (324)
NOTEQUAL (325) 132
GREATERTHAN (326) 128
GREATEROREQUAL (327) 127
LESSTHAN (328) 130
LESSOREQUAL (329) 129
LEFT_PARENTHES (330) 57 105 112 113 114 115 116 145 148 151 156
RIGHT_PARENTHES (331) 57 105 112 113 114 115 116 145 148 151 156
LEFT_BRACES (332)
RIGHT_BRACES (333)
LEFT_BRACKETS (334)
RIGHT_BRACKETS (335)
COLON (336) 83 87 93 94 95 96 97 100 105 111 116 144 145 146 147 148
    149 150 151 152 153 154 155 156
COMMA (337) 76 82 102 119 121
SEMICOLON (338)
INTEGER (339) 68
FLOAT (340) 69
DEDENT (341) 84 106 117
INDENT (342) 84 106 117
NEWLINE (343) 2 6 9 33 84 106 110 117
KEYWORD_MATCH (344) 83
KEYWORD_CASE (345) 87
TUPLE (346) 64
UMINUS (347)


Nonterminals, with rules where they appear

$accept (99)
    on left: 0
prog (100)
    on left: 1 2 3, on right: 0 3
statements (101)
    on left: 4 5 6, on right: 3 4 6 117
statement (102)
    on left: 7 8 9 10 11, on right: 4 5
simple_statement (103)
    on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25, on right: 8
compound_statement (104)
    on left: 26 27 28 29 30 31 32, on right: 7
import_statments (105)
    on left: 33 34, on right: 20 34
import_statment (106)
    on left: 35 36 37 38 39, on right: 33 34
assignment (107)
    on left: 40 41 42 43 44 45 46 47 48 49, on right: 12 108
expression (108)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67,
    on right: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    58 72 74 87 119 120 121 122 126 127 128 129 130 131 132 133
number (109)
    on left: 68 69, on right: 59 113
del_statment (110)
    on left: 70 71, on right: 19
return_statement (111)
    on left: 72 73, on right: 13
yield_statement (112)
    on left: 74, on right: 14
assert_statement (113)
    on left: 75 76, on right: 15
raise_statement (114)
    on left: 77 78, on right: 16
global_statement (115)
    on left: 79, on right: 17
nonlocal_statement (116)
    on left: 80, on right: 18
global_nonlocal_targets (117)
    on left: 81 82, on right: 79 80 82
match_statement (118)
    on left: 83, on right: 31
match_block (119)
    on left: 84, on right: 83
cases (120)
    on left: 85 86, on right: 84 85
case (121)
    on left: 87, on right: 85 86
try_statement (122)
    on left: 88 89 90 91 92, on right: 32
try (123)
    on left: 93, on right: 88 89 90 91 92
except (124)
    on left: 94 95 96, on right: 98 99
finally (125)
    on left: 97, on right: 88 90 92
except_statements (126)
    on left: 98 99, on right: 89 90 91 92 98
with_statment (127)
    on left: 100, on right: 22
with_stmt (128)
    on left: 101 102, on right: 100 102
class (129)
    on left: 103 104, on right: 28
class_with_inheritance (130)
    on left: 105, on right: 103
class_block (131)
    on left: 106, on right: 105 111
class_body (132)
    on left: 107 108 109 110, on right: 106 108 109 110
class_without_inheritance (133)
    on left: 111, on right: 104
function_call (134)
    on left: 112 113 114 115, on right: 21 61 77 78 101 102 115 125
    149 151 153 154
function (135)
    on left: 116, on right: 26 109
block (136)
    on left: 117, on right: 87 93 94 95 96 97 100 116 144 145 146 147
    148 149 150 151 152 153 154 155 156
args (137)
    on left: 118 119 120 121 122, on right: 105 112 116 119 120 151
member_expression (138)
    on left: 123 124 125, on right: 35 36 37 38 39 40 41 42 43 44 45
    46 47 48 49 60 95 96 124 125 152 153 154
logical_expression (139)
    on left: 126 127 128 129 130 131 132 133 134 135 136, on right:
    73 75 76 134 135 136 144 145 147 148 155 156
conditional_statement (140)
    on left: 137, on right: 27
elif_else (141)
    on left: 138 139 140 141, on right: 137
elif_stmts (142)
    on left: 142 143, on right: 139 140 143
if_statement (143)
    on left: 144 145, on right: 137
else_statement (144)
    on left: 146, on right: 91 92 139 141
elif_statement (145)
    on left: 147 148, on right: 142 143
for_statement (146)
    on left: 149 150 151 152 153 154, on right: 29
while_statement (147)
    on left: 155 156, on right: 30


state 0

    0 $accept: . prog $end

    NEWLINE  shift, and go to state 1

    NEWLINE   [reduce using rule 1 (prog)]
    $default  reduce using rule 1 (prog)

    prog  go to state 2


state 1

    2 prog: NEWLINE .

    $default  reduce using rule 2 (prog)


state 2

    0 $accept: prog . $end
    3 prog: prog . statements

    $end              shift, and go to state 3
    IDENTIFIER        shift, and go to state 4
    KEYWORD_IF        shift, and go to state 5
    KEYWORD_IMPORT    shift, and go to state 6
    KEYWORD_PASS      shift, and go to state 7
    KEYWORD_BREAK     shift, and go to state 8
    KEYWORD_RAISE     shift, and go to state 9
    KEYWORD_CLASS     shift, and go to state 10
    KEYWORD_RETURN    shift, and go to state 11
    KEYWORD_CONTINUE  shift, and go to state 12
    KEYWORD_FOR       shift, and go to state 13
    KEYWORD_TRY       shift, and go to state 14
    KEYWORD_DEF       shift, and go to state 15
    KEYWORD_FROM      shift, and go to state 16
    KEYWORD_NONLOCAL  shift, and go to state 17
    KEYWORD_WHILE     shift, and go to state 18
    KEYWORD_ASSERT    shift, and go to state 19
    KEYWORD_DEL       shift, and go to state 20
    KEYWORD_GLOBAL    shift, and go to state 21
    KEYWORD_WITH      shift, and go to state 22
    KEYWORD_YIELD     shift, and go to state 23
    COMMENT           shift, and go to state 24
    MULTILINECOMMENT  shift, and go to state 25
    NEWLINE           shift, and go to state 26
    KEYWORD_MATCH     shift, and go to state 27

    statements                 go to state 28
    statement                  go to state 29
    simple_statement           go to state 30
    compound_statement         go to state 31
    import_statments           go to state 32
    import_statment            go to state 33
    assignment                 go to state 34
    del_statment               go to state 35
    return_statement           go to state 36
    yield_statement            go to state 37
    assert_statement           go to state 38
    raise_statement            go to state 39
    global_statement           go to state 40
    nonlocal_statement         go to state 41
    match_statement            go to state 42
    try_statement              go to state 43
    try                        go to state 44
    with_statment              go to state 45
    class                      go to state 46
    class_with_inheritance     go to state 47
    class_without_inheritance  go to state 48
    function_call              go to state 49
    function                   go to state 50
    member_expression          go to state 51
    conditional_statement      go to state 52
    if_statement               go to state 53
    for_statement              go to state 54
    while_statement            go to state 55


state 3

    0 $accept: prog $end .

    $default  accept


state 4

  112 function_call: IDENTIFIER . LEFT_PARENTHES args RIGHT_PARENTHES
  113              | IDENTIFIER . LEFT_PARENTHES number RIGHT_PARENTHES
  114              | IDENTIFIER . LEFT_PARENTHES LITERALSTRING RIGHT_PARENTHES
  115              | IDENTIFIER . LEFT_PARENTHES function_call RIGHT_PARENTHES
  123 member_expression: IDENTIFIER .

    LEFT_PARENTHES  shift, and go to state 56

    LEFT_PARENTHES  [reduce using rule 123 (member_expression)]
    $default        reduce using rule 123 (member_expression)


state 5

  144 if_statement: KEYWORD_IF . logical_expression COLON block
  145             | KEYWORD_IF . LEFT_PARENTHES logical_expression RIGHT_PARENTHES COLON block

    IDENTIFIER      shift, and go to state 4
    LIST            shift, and go to state 57
    LITERALSTRING   shift, and go to state 58
    KEYWORD_FALSE   shift, and go to state 59
    KEYWORD_TRUE    shift, and go to state 60
    KEYWORD_NONE    shift, and go to state 61
    KEYWORD_NOT     shift, and go to state 62
    MINUS           shift, and go to state 63
    LEFT_PARENTHES  shift, and go to state 64
    INTEGER         shift, and go to state 65
    FLOAT           shift, and go to state 66
    TUPLE           shift, and go to state 67
    '|'             shift, and go to state 68

    expression          go to state 69
    number              go to state 70
    function_call       go to state 71
    member_expression   go to state 72
    logical_expression  go to state 73


state 6

   35 import_statment: KEYWORD_IMPORT . member_expression
   38                | KEYWORD_IMPORT . member_expression KEYWORD_AS IDENTIFIER

    IDENTIFIER  shift, and go to state 74

    member_expression  go to state 75


state 7

   23 simple_statement: KEYWORD_PASS .

    $default  reduce using rule 23 (simple_statement)


state 8

   24 simple_statement: KEYWORD_BREAK .

    $default  reduce using rule 24 (simple_statement)


state 9

   77 raise_statement: KEYWORD_RAISE . function_call
   78                | KEYWORD_RAISE . function_call KEYWORD_FROM IDENTIFIER

    IDENTIFIER  shift, and go to state 76

    function_call  go to state 77


state 10

  105 class_with_inheritance: KEYWORD_CLASS . IDENTIFIER LEFT_PARENTHES args RIGHT_PARENTHES COLON class_block
  111 class_without_inheritance: KEYWORD_CLASS . IDENTIFIER COLON class_block

    IDENTIFIER  shift, and go to state 78


state 11

   72 return_statement: KEYWORD_RETURN . expression
   73                 | KEYWORD_RETURN . logical_expression

    IDENTIFIER      shift, and go to state 4
    LIST            shift, and go to state 57
    LITERALSTRING   shift, and go to state 58
    KEYWORD_FALSE   shift, and go to state 59
    KEYWORD_TRUE    shift, and go to state 60
    KEYWORD_NONE    shift, and go to state 61
    KEYWORD_NOT     shift, and go to state 62
    MINUS           shift, and go to state 63
    LEFT_PARENTHES  shift, and go to state 79
    INTEGER         shift, and go to state 65
    FLOAT           shift, and go to state 66
    TUPLE           shift, and go to state 67
    '|'             shift, and go to state 68

    expression          go to state 80
    number              go to state 70
    function_call       go to state 71
    member_expression   go to state 72
    logical_expression  go to state 81


state 12

   25 simple_statement: KEYWORD_CONTINUE .

    $default  reduce using rule 25 (simple_statement)


state 13

  149 for_statement: KEYWORD_FOR . IDENTIFIER KEYWORD_IN function_call COLON block
  150              | KEYWORD_FOR . IDENTIFIER KEYWORD_IN LIST COLON block
  151              | KEYWORD_FOR . LEFT_PARENTHES args RIGHT_PARENTHES KEYWORD_IN function_call COLON block
  152              | KEYWORD_FOR . IDENTIFIER KEYWORD_IN member_expression COLON block
  153              | KEYWORD_FOR . IDENTIFIER KEYWORD_IN member_expression function_call COLON block
  154              | KEYWORD_FOR . IDENTIFIER KEYWORD_IN member_expression function_call '.' IDENTIFIER COLON block

    IDENTIFIER      shift, and go to state 82
    LEFT_PARENTHES  shift, and go to state 83


state 14

   93 try: KEYWORD_TRY . COLON block

    COLON  shift, and go to state 84


state 15

  116 function: KEYWORD_DEF . IDENTIFIER LEFT_PARENTHES args RIGHT_PARENTHES COLON block

    IDENTIFIER  shift, and go to state 85


state 16

   36 import_statment: KEYWORD_FROM . member_expression KEYWORD_IMPORT IDENTIFIER
   37                | KEYWORD_FROM . member_expression KEYWORD_IMPORT '*'
   39                | KEYWORD_FROM . member_expression KEYWORD_IMPORT IDENTIFIER KEYWORD_AS IDENTIFIER

    IDENTIFIER  shift, and go to state 74

    member_expression  go to state 86


state 17

   80 nonlocal_statement: KEYWORD_NONLOCAL . global_nonlocal_targets

    IDENTIFIER  shift, and go to state 87

    global_nonlocal_targets  go to state 88


state 18

  155 while_statement: KEYWORD_WHILE . logical_expression COLON block
  156                | KEYWORD_WHILE . LEFT_PARENTHES logical_expression RIGHT_PARENTHES COLON block

    IDENTIFIER      shift, and go to state 4
    LIST            shift, and go to state 57
    LITERALSTRING   shift, and go to state 58
    KEYWORD_FALSE   shift, and go to state 59
    KEYWORD_TRUE    shift, and go to state 60
    KEYWORD_NONE    shift, and go to state 61
    KEYWORD_NOT     shift, and go to state 62
    MINUS           shift, and go to state 63
    LEFT_PARENTHES  shift, and go to state 89
    INTEGER         shift, and go to state 65
    FLOAT           shift, and go to state 66
    TUPLE           shift, and go to state 67
    '|'             shift, and go to state 68

    expression          go to state 69
    number              go to state 70
    function_call       go to state 71
    member_expression   go to state 72
    logical_expression  go to state 90


state 19

   75 assert_statement: KEYWORD_ASSERT . logical_expression
   76                 | KEYWORD_ASSERT . logical_expression COMMA LITERALSTRING

    IDENTIFIER      shift, and go to state 4
    LIST            shift, and go to state 57
    LITERALSTRING   shift, and go to state 58
    KEYWORD_FALSE   shift, and go to state 59
    KEYWORD_TRUE    shift, and go to state 60
    KEYWORD_NONE    shift, and go to state 61
    KEYWORD_NOT     shift, and go to state 62
    MINUS           shift, and go to state 63
    LEFT_PARENTHES  shift, and go to state 79
    INTEGER         shift, and go to state 65
    FLOAT           shift, and go to state 66
    TUPLE           shift, and go to state 67
    '|'             shift, and go to state 68

    expression          go to state 69
    number              go to state 70
    function_call       go to state 71
    member_expression   go to state 72
    logical_expression  go to state 91


state 20

   70 del_statment: KEYWORD_DEL . IDENTIFIER
   71             | KEYWORD_DEL . IDENTIFIER LIST

    IDENTIFIER  shift, and go to state 92


state 21

   79 global_statement: KEYWORD_GLOBAL . global_nonlocal_targets

    IDENTIFIER  shift, and go to state 87

    global_nonlocal_targets  go to state 93


state 22

  100 with_statment: KEYWORD_WITH . with_stmt COLON block

    IDENTIFIER  shift, and go to state 76

    with_stmt      go to state 94
    function_call  go to state 95


state 23

   74 yield_statement: KEYWORD_YIELD . expression

    IDENTIFIER      shift, and go to state 4
    LIST            shift, and go to state 57
    LITERALSTRING   shift, and go to state 58
    KEYWORD_FALSE   shift, and go to state 59
    KEYWORD_TRUE    shift, and go to state 60
    KEYWORD_NONE    shift, and go to state 61
    MINUS           shift, and go to state 63
    LEFT_PARENTHES  shift, and go to state 79
    INTEGER         shift, and go to state 65
    FLOAT           shift, and go to state 66
    TUPLE           shift, and go to state 67
    '|'             shift, and go to state 68

    expression         go to state 96
    number             go to state 70
    function_call      go to state 71
    member_expression  go to state 72


state 24

   10 statement: COMMENT .

    $default  reduce using rule 10 (statement)


state 25

   11 statement: MULTILINECOMMENT .

    $default  reduce using rule 11 (statement)


state 26

    9 statement: NEWLINE .

    $default  reduce using rule 9 (statement)


state 27

   83 match_statement: KEYWORD_MATCH . IDENTIFIER COLON match_block

    IDENTIFIER  shift, and go to state 97


state 28

    3 prog: prog statements .
    4 statements: statements . statement
    6           | statements . NEWLINE

    IDENTIFIER        shift, and go to state 4
    KEYWORD_IF        shift, and go to state 5
    KEYWORD_IMPORT    shift, and go to state 6
    KEYWORD_PASS      shift, and go to state 7
    KEYWORD_BREAK     shift, and go to state 8
    KEYWORD_RAISE     shift, and go to state 9
    KEYWORD_CLASS     shift, and go to state 10
    KEYWORD_RETURN    shift, and go to state 11
    KEYWORD_CONTINUE  shift, and go to state 12
    KEYWORD_FOR       shift, and go to state 13
    KEYWORD_TRY       shift, and go to state 14
    KEYWORD_DEF       shift, and go to state 15
    KEYWORD_FROM      shift, and go to state 16
    KEYWORD_NONLOCAL  shift, and go to state 17
    KEYWORD_WHILE     shift, and go to state 18
    KEYWORD_ASSERT    shift, and go to state 19
    KEYWORD_DEL       shift, and go to state 20
    KEYWORD_GLOBAL    shift, and go to state 21
    KEYWORD_WITH      shift, and go to state 22
    KEYWORD_YIELD     shift, and go to state 23
    COMMENT           shift, and go to state 24
    MULTILINECOMMENT  shift, and go to state 25
    NEWLINE           shift, and go to state 98
    KEYWORD_MATCH     shift, and go to state 27

    IDENTIFIER        [reduce using rule 3 (prog)]
    KEYWORD_IF        [reduce using rule 3 (prog)]
    KEYWORD_IMPORT    [reduce using rule 3 (prog)]
    KEYWORD_PASS      [reduce using rule 3 (prog)]
    KEYWORD_BREAK     [reduce using rule 3 (prog)]
    KEYWORD_RAISE     [reduce using rule 3 (prog)]
    KEYWORD_CLASS     [reduce using rule 3 (prog)]
    KEYWORD_RETURN    [reduce using rule 3 (prog)]
    KEYWORD_CONTINUE  [reduce using rule 3 (prog)]
    KEYWORD_FOR       [reduce using rule 3 (prog)]
    KEYWORD_TRY       [reduce using rule 3 (prog)]
    KEYWORD_DEF       [reduce using rule 3 (prog)]
    KEYWORD_FROM      [reduce using rule 3 (prog)]
    KEYWORD_NONLOCAL  [reduce using rule 3 (prog)]
    KEYWORD_WHILE     [reduce using rule 3 (prog)]
    KEYWORD_ASSERT    [reduce using rule 3 (prog)]
    KEYWORD_DEL       [reduce using rule 3 (prog)]
    KEYWORD_GLOBAL    [reduce using rule 3 (prog)]
    KEYWORD_WITH      [reduce using rule 3 (prog)]
    KEYWORD_YIELD     [reduce using rule 3 (prog)]
    COMMENT           [reduce using rule 3 (prog)]
    MULTILINECOMMENT  [reduce using rule 3 (prog)]
    NEWLINE           [reduce using rule 3 (prog)]
    KEYWORD_MATCH     [reduce using rule 3 (prog)]
    $default          reduce using rule 3 (prog)

    statement                  go to state 99
    simple_statement           go to state 30
    compound_statement         go to state 31
    import_statments           go to state 32
    import_statment            go to state 33
    assignment                 go to state 34
    del_statment               go to state 35
    return_statement           go to state 36
    yield_statement            go to state 37
    assert_statement           go to state 38
    raise_statement            go to state 39
    global_statement           go to state 40
    nonlocal_statement         go to state 41
    match_statement            go to state 42
    try_statement              go to state 43
    try                        go to state 44
    with_statment              go to state 45
    class                      go to state 46
    class_with_inheritance     go to state 47
    class_without_inheritance  go to state 48
    function_call              go to state 49
    function                   go to state 50
    member_expression          go to state 51
    conditional_statement      go to state 52
    if_statement               go to state 53
    for_statement              go to state 54
    while_statement            go to state 55


state 29

    5 statements: statement .

    $default  reduce using rule 5 (statements)


state 30

    8 statement: simple_statement .

    $default  reduce using rule 8 (statement)


state 31

    7 statement: compound_statement .

    $default  reduce using rule 7 (statement)


state 32

   20 simple_statement: import_statments .
   34 import_statments: import_statments . import_statment

    KEYWORD_IMPORT  shift, and go to state 6
    KEYWORD_FROM    shift, and go to state 16

    KEYWORD_IMPORT  [reduce using rule 20 (simple_statement)]
    KEYWORD_FROM    [reduce using rule 20 (simple_statement)]
    $default        reduce using rule 20 (simple_statement)

    import_statment  go to state 100


state 33

   33 import_statments: import_statment . NEWLINE

    NEWLINE  shift, and go to state 101


state 34

   12 simple_statement: assignment .

    $default  reduce using rule 12 (simple_statement)


state 35

   19 simple_statement: del_statment .

    $default  reduce using rule 19 (simple_statement)


state 36

   13 simple_statement: return_statement .

    $default  reduce using rule 13 (simple_statement)


state 37

   14 simple_statement: yield_statement .

    $default  reduce using rule 14 (simple_statement)


state 38

   15 simple_statement: assert_statement .

    $default  reduce using rule 15 (simple_statement)


state 39

   16 simple_statement: raise_statement .

    $default  reduce using rule 16 (simple_statement)


state 40

   17 simple_statement: global_statement .

    $default  reduce using rule 17 (simple_statement)


state 41

   18 simple_statement: nonlocal_statement .

    $default  reduce using rule 18 (simple_statement)


state 42

   31 compound_statement: match_statement .

    $default  reduce using rule 31 (compound_statement)


state 43

   32 compound_statement: try_statement .

    $default  reduce using rule 32 (compound_statement)


state 44

   88 try_statement: try . finally
   89              | try . except_statements
   90              | try . except_statements finally
   91              | try . except_statements else_statement
   92              | try . except_statements else_statement finally

    KEYWORD_EXCEPT   shift, and go to state 102
    KEYWORD_FINALLY  shift, and go to state 103

    except             go to state 104
    finally            go to state 105
    except_statements  go to state 106


state 45

   22 simple_statement: with_statment .

    $default  reduce using rule 22 (simple_statement)


state 46

   28 compound_statement: class .

    $default  reduce using rule 28 (compound_statement)


state 47

  103 class: class_with_inheritance .

    $default  reduce using rule 103 (class)


state 48

  104 class: class_without_inheritance .

    $default  reduce using rule 104 (class)


state 49

   21 simple_statement: function_call .

    $default  reduce using rule 21 (simple_statement)


state 50

   26 compound_statement: function .

    $default  reduce using rule 26 (compound_statement)


state 51

   40 assignment: member_expression . ASSIGN expression
   41           | member_expression . ASSIGNADD expression
   42           | member_expression . ASSIGNDIVIDE expression
   43           | member_expression . ASSIGNEXPONINTIATION expression
   44           | member_expression . ASSIGNMULTIPLY expression
   45           | member_expression . ASSIGNMODULO expression
   46           | member_expression . ASSIGNMINUS expression
   47           | member_expression . ASSIGNFLOORDIVISION expression
   48           | member_expression . ASSIGNRIGHTSHIFT expression
   49           | member_expression . ASSIGNLEFTSHIFT expression
  124 member_expression: member_expression . IDENTIFIER
  125                  | member_expression . function_call
